JavaScript_JQuery_AngularJS/src/objects/Class__c.object
<CustomObject>
    <description>Class having a number of students in it</description>
    <fields>
        <fullName>Board__c</fullName>
        <description>Board of education from which student is studying.</description>
        <inlineHelpText>Board of education. Select one from list.</inlineHelpText>
        <label>Board</label>
        <picklist>
            <picklistValues>
                <fullName>RAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIHAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClassTeacher__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Class Teacher related to a class</description>
        <inlineHelpText>Select class teacher of class.</inlineHelpText>
        <label>ClassTeacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>Classes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Detailed description of the class.</description>
        <inlineHelpText>Description of the class</inlineHelpText>
        <label>Detailed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <description>Fee for the particular class.</description>
        <inlineHelpText>Fee for the particular class.</inlineHelpText>
        <label>Fee</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Size__c</fullName>
        <description>Maximum student a class can have.</description>
        <inlineHelpText>Maximum student a class can have.</inlineHelpText>
        <label>Max Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Count__c</fullName>
        <description>My count of class.</description>
        <inlineHelpText>Please fill my count of the class.</inlineHelpText>
        <label>My Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of the class.</description>
        <inlineHelpText>Please fill the name of the class.</inlineHelpText>
        <label>Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Students__c</fullName>
        <description>Number of student in a class</description>
        <inlineHelpText>Number of student in a class</inlineHelpText>
        <label>No Of Students</label>
        <summaryForeignKey>Student__c.Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>